tests/cmp/record-pat-dotdot-in-expression.golden
Parse Error:
tests/cmp/record-pat-dotdot-in-expression.trp:3:14: parse error
  3 |     val {a = .., b} = r
    |              ^
  unexpected '..'
  expected one of: 'true', 'false', number, float, string, identifier, label, '`<' (DC label), '(', '_', '[', '{'

