tests/cmp/record-pat-dotdot-in-expression.trp
(* Test: .. in field value position - should fail *)
let val r = {a = 1, b = 2, c = 3}
    val {a = .., b} = r
in b
end